--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2998,7 +2998,7 @@ The following people contributed directly to the development of this specificati
 	\item Maria Keet, University of Cape Town, South Africa 
 	\item Elisa Kendall, Thematix Partners LLC, USA	
         \item Alexander Knapp, University of Augsburg, Germany
-	\item Oliver Kutz, Free University of Bolzano, Italy
+	\item Oliver Kutz, Free University of Bozen-Bolzano, Italy
 	\item Christoph Lange, University of Bonn and Fraunhofer IAIS, Germany
 	\item Terry Longstreth, Independent Consultant, USA 	
         \item Christian Maeder, Jacobs University Bremen, Germany
