fixed layout problem

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4349,9 +4349,7 @@ A \termref{document} (\syntax{Document}) can be a
   OMS written in an OMS language that conforms with \DOL; \cf
   \ref{c:conform:logic}).
 \end{itemize}
-A \DOL library 
-
- consists of a collection of (named)  OMS,  OMS networks, and mappings between these.  More specifically, a \DOL
+A \DOL library consists of a collection of (named)  OMS,  OMS networks, and mappings between these.  More specifically, a \DOL
 library consists of a name, followed by a list of
 \syntax{LibraryItem}s.  A \syntax{LibraryItem} is either a
 \syntax{Definition},
