labels for examples, debugging listings and keywords

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -11202,7 +11202,7 @@ combine NetworkElements  & Alignments, Publications \\\hline
 %combine NetworkElements excluding IRIs  &  \\\hline
 \end{tabular}
 
-\sclause{Simple Examples in Propositional Logic}
+\sclause{Simple Examples in Propositional Logic}\label{ex:prop}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/prop#>
          log:   <http://purl.net/DOL/logics/>
@@ -11407,7 +11407,7 @@ then
   }
 \end{lstlisting}
 
-\sclause{Defined Concepts}
+\sclause{Defined Concepts}\label{ex:definedconcepts}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
 %prefix( lang:  <http://purl.net/DOL/languages/> )%
 
@@ -11423,7 +11423,7 @@ end
 \end{lstlisting}
 
 
-\sclause{Blocks World: Minimization}
+\sclause{Blocks World: Minimization}\label{ex:blocks}
 \CLnote[type=q-aut]{Here we need the prefixes for registry entries (e.g.\ logics) once more; they should be reused across examples.  Or we need to specify a mechanism that gets rid of \emph{these} prefixes altogether.  @TM, could you please comment on my specification enhancement request \texttt{http://trac.informatik.uni-bremen.de:8080/hets/ticket/1020\#comment:33}?}
   \begin{lstlisting}[language=dolText,morekeywords={forall,if,not,Class,Individual,Types,EquivalentTo,SubClassOf,and}]
 %prefix( lang:  <http://purl.net/DOL/languages/>)%
@@ -11499,7 +11499,7 @@ then %implied
 end
 \end{lstlisting}
 
-\ssclause{Alignments}
+\sclause{Alignments}\label{ex:alignment}
 \index{alignment}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/alignment#>
@@ -11561,7 +11561,7 @@ end
 \end{lstlisting}
 
 
-\sclause{Distributed Description Logics}
+\sclause{Distributed Description Logics}\label{ex:DDL}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/mereology#>
@@ -11642,7 +11642,7 @@ end
 \end{lstlisting}
 
 
-\sclause{Algebra}
+\sclause{Algebra}\label{ex:algebra}
 
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,equivalence},escapechar=@,mathescape]
@@ -11802,8 +11802,8 @@ are equivalent to \syntax{Group\_with\_implicit\_inverse}.
 %Computing interpolants can be hard, even undecidable.
 \medskip
 
-\sssclause{Groups and filtering}
-\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
+\sssclause{Groups and filtering}\label{ex:reject}
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget,reject,select},escapechar=@,mathescape]
 language lang:CASL
 spec Group_via_Filtering_1 =
   Group_with_inverse reject inv
