Annex L fixes and labels; new file listing DOL keywords appearing in various examples (in order to have an overview for linking)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -11829,7 +11829,7 @@ end
 
 
 
-\sclause{Queries}
+\sclause{Queries}\label{ex:queries}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,query,select,where,in,substitution,result,for,along,library,spec,sort,pred,op},escapechar=@,mathescape]
 %prefix( lang:  <http://purl.net/DOL/languages/> )%
 library MyQuery
@@ -11846,7 +11846,7 @@ end
 result MyResult = MySubst for MyQuery
 \end{lstlisting}
 
-\sclause{Datatypes}
+\sclause{Datatypes}\label{ex:datatypes}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,in,approximate,extract,free,cofree,spec},escapechar=@,mathescape]
 %prefix( lang:  <http://purl.net/DOL/languages/> )%
