--- a/Standard/lstsemantic.sty
+++ b/Standard/lstsemantic.sty
@@ -61,6 +61,8 @@ ontology,and,then,%
 combine,%
 interpretation,view,alignment,module,for,of,to,relation,%
 circ,var,minimize,%
+keep,forget%
+reject,select%
 with,%
 prefix},
 alsoletter=-,%
