debugging the bib file

--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -329,12 +329,14 @@ ZimmerEuze06,
   YEAR = {2004},
 }
 
-@article{SROIQ,
-  author = {I. Horrocks and Oliver Kutz and U. Sattler},
-  title = {The Even More Irresistible SROIQ},
-  journal = {In Knowledge representation 2006, p. 57--67},
-  year = 2006,
-}
+@inproceedings{SROIQ,
+	Author = {I. Horrocks AND O. Kutz AND U. Sattler},
+	Booktitle = {Proc.\ of the 10th International Conference on Principles of Knowledge Representation and Reasoning (KR-06)},
+	Editor = {Patrick Doherty and John Mylopoulos and Christopher Welty},
+	Publisher = {AAAI Press},
+	Title = {{The Even More Irresistible $\mathcal{SROIQ}$}},
+	Year = {2006}}
+
 @article{Lucanu,
   author = {D. Lucanu and Y.-F. Li and J. Song Dong},
   title = {Semantic Web Languages --- Towards an Institutional Perspective},
