rephrased text about DOL registry.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8670,17 +8670,35 @@ to that of the top-level classes:
 
 \section{\DOL Registry}\label{a:registry}
 
-  \ednote{This paragraph has merely been moved.}
-It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
-languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for \DOL-conforming languages and translations} hosted
-at \url{http://purl.net/DOL/registry}.  The registry  also includes descriptions of
-\DOL-conforming languages and translations (as well as other information needed by implementors
-and users) in both human-readable and machine-processable form.  
+OMG hosts a registry for DOL-conforming languages and translations. This registry will enable the 
+ use of other DOL-conforming languages than the ones that are discussed in this OMG Specification. 
+The registry also includes descriptions of DOL-conforming languages and translations (as well as 
+ other information needed by implementors and users) in both human-readable and 
+machine-processable form.
 
-There will be Maintenance Authority (MA) {or, depending on advisability, a Registration
-Authority} established to maintain the registry as an informative resource governed by the
-standard.  The registry contents itself will not be normative; however, it is 
-expected to become the basis for normative activities.
+OMG maintains the registry as an informative resource governed by the standard. The registry 
+ contents itself is informative. 
+
+% %  \ednote{This paragraph has merely been moved.}
+% It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
+% languages that are discussed in this \IS. OMG hosts a
+% \textbf{\termref{registry} for
+%  \DOL-conforming languages and translations}.
+% %
+% %There is a  \textbf{\termref{registry} for
+% %\DOL-conforming languages and translations} hosted
+% %at \url{http://purl.net/DOL/registry}.
+% The registry  also includes descriptions of
+% \DOL-conforming languages and translations (as well as other information needed by implementors
+% and users) in both human-readable and machine-processable form.
+%
+% %There will be Maintenance Authority (MA) {or, depending on advisability, a Registration
+% %Authority} established to
+%
+% OMG maintains the registry as an informative resource governed by the
+% standard.  The registry contents itself is informative.
+% %will not be normative; however, it is
+% %expected to become the basis for normative activities.
 
 
 \infannex{Conformance of OWL 2 DL With \DOL}\label{a:owl}
