generic link in 9.2.1 for DOL library

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4365,7 +4365,7 @@ to a mapping between OMS (\syntax{MappingDefinition}), or
 an OMS network  (\syntax{NetworkDefinition}). Moreover, annex~\ref{a:queries}
 informatively introduces \syntax{QueryRelatedDefinition}.
 
-At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abbreviating long IRIs  using CURIEs; see \cref{c:identifiers} for further details.
+At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abbreviating long IRIs  using CURIEs; see \cref{c:identifiers} for further details. Examples of the use of \DOL library can be found in Appendix~\ref{a:uses} and Section~\ref{c:goal}.
 
 \medskip
 \begin{figure}
