some links in 9.4.1

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4496,13 +4496,15 @@ these alternatives, a subclass is introduced. An OMS can be
 an OMS (to be translated), and a specification of the translation,
 which is covered by the class \syntax{OMSTranslation};
 \item a \syntax{UnionsOMS}, uniting two given OMS; 
+(See Appendix~\ref{ex:engine} for an example.)
 \item a \syntax{ClosureOMS}, applying a closure operator
 (given by a \syntax{Closure}) to an OMS; 
 \item an \syntax{ExtensionOMS}, extending a given OMS with another OMS
   (given by the \syntax{Extension}). The major difference between a
   union and extension is that the members of the unions need to be
   self-contained OMS, while the extensions may reuse the signature of
-  the extended OMS;
+  the extended OMS; 
+  (See Appendix~\ref{ex:engine}, \ref{dist-het-onto}, \ref{ex:definedconcepts} for examples.)
 \item an \syntax{ExtendingOMS}, which is a very simple form of OMS,
 namely a basic OMS or an OMS reference (see below);
 \item a \syntax{FilteringOMS}, applying a filtering operator
@@ -4511,7 +4513,8 @@ namely a basic OMS or an OMS reference (see below);
 (given by an \syntax{Approximation}) to an OMS;
 \item a \syntax{CombinationOMS}, giving a combination of (the OMS
   contained in) an OMS network (technically, this is a colimit, see
-  \cite{ZimmermanEtAl06});
+  \cite{ZimmermanEtAl06}); 
+  (See Appendix~\ref{ex:alignment} for an example of the use of \syntax{combination}.)
 \item a \syntax{ReductionOMS}, applying a reduction
 (given by an \syntax{Reduction}) to an OMS;
 \item a \syntax{ExtractionOMS}, applying a module extraction operator
@@ -11267,7 +11270,7 @@ ontology Taxonomy = %conssistent
 end
 \end{lstlisting}
 
-\sclause{Engine Diagnosis and Repair}\label{engine}
+\sclause{Engine Diagnosis and Repair}\label{ex:engine}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,import},escapechar=@,mathescape]
 %prefix( log: <http://purl.net/DOL/logics/> )%
