more links in 9.4.1.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4509,6 +4509,7 @@ which is covered by the class \syntax{OMSTranslation};
 namely a basic OMS or an OMS reference (see below);
 \item a \syntax{FilteringOMS}, applying a filtering operator
 (given by a \syntax{Filtering}) to an OMS;
+  (See Appendix~\ref{ex:reject} for an example.}
 \item an \syntax{ApproximationOMS}, applying an approximation operator
 (given by an \syntax{Approximation}) to an OMS;
 \item a \syntax{CombinationOMS}, giving a combination of (the OMS
