changed my affiliation

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2991,7 +2991,7 @@ The following people contributed directly to the development of this specificati
 	\begin{itemize}
 	\item Tara Athan, Athan Services, USA 
 	\item Conrad Bock, National Institute of Standards and Technology, USA
-	\item Mihai Codescu, Otto-von-Guericke University Magdeburg, Germany 
+	\item Mihai Codescu, Free University of Bozen-Bolzano, Italy 
         \item Daniel Couto Vale, University of Bremen, Germany
         \item Martin Glauer, Otto-von-Guericke University Magdeburg, Germany
 	\item Michael Gruninger, University of Toronto, Canada  
