--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7315,9 +7315,9 @@ defined – in detail:
 \begin{algorithmic}
   \REQUIRE $O_s, O_t$ are OMS
   \REQUIRE $M\subseteq |\Sig(O_s)|\times|\Sig(O_t)|$ maps non-logical symbols (\ie elements of the signature) of $O_s$ to non-logical symbols of $O_t$
-  \FORALL{$e_s\in|\Sigma(O_s)|$ not covered by $M$}
+  \FORALL{$e_s\in|\Sig(O_s)|$ not covered by $M$}
     \STATE $n_s\leftarrow\operatorname{localname}(e_s)$
-    \STATE $N_t\leftarrow\{\operatorname{ e\in|\Sigma(O_t)|  \mid localname}(e) = n_s\}$
+    \STATE $N_t\leftarrow\{\operatorname{ e\in|\Sig(O_t)|  \mid localname}(e) = n_s\}$
     \IF[\ie if there is a unique target]{$N_t = \{ e_t \}$}
       \STATE $M\leftarrow M\cup\{(e_s, e_t)\}$
     \ENDIF
